<resources>
    <string name="app_name">Ad340</string>
    <string name="ad340_mobile_app">AD340 - mobile app</string>
    <string name="click_me">Click Me!!</string>
    <string name="week_one_hello_world">Week One - Hello World</string>
    <string name="bahrehmand_farhad_04_13_2020">Bahrehmand, Farhad 04-13-2020</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="select_your_date_of_birth">Date of Birth</string>
    <string name="register">Register</string>
    <string name="week_two_form">week two - form</string>
    <string name="bahrehmand_farhad_04_22_2020">Bahrehmand, Farhad 04-22-2020</string>
    <string name="back_to_form">Back to Form</string>
    <string name="requiredFieldMessage">name is required</string>
    <string name="testTitle">Bahrehmand, Farhad 04-22-2020</string>
    <string name="date_of_birth_title">Date of Birth:</string>
    <string name="date_of_birth_mm_dd_yyyy">Date of Birth (mm-dd-yyyy)</string>
    <string name="required">\ is required\</string>
    <string name="wrongFormat">\ is in wrong format\</string>
    <string name="shouldBeANumber">\ should be a number\</string>
    <string name="tooYoung">Sorry!! you are too young</string>
    <string name="tooOld">too old</string>
    <string name="dob">date of birth</string>
    <string name="dateFormat">dd/MM/yyyy</string>
    <string name="slash">/</string>
    <string name="dash">-</string>
    <string name="zero">0</string>
    <string name="ageNotMatched">\your age is not matched with your date of birth, calendar says you are \</string>
    <string name="badFormat">seems one of the fields have wrong format</string>
    <string name="signup">you are close to sign up!!</string>
    <string name="thanks">\Thanks for Signing Up!\</string>
    <string name="hello">\Hello \</string>
    <string name="exclamation">!</string>
    <string name="signupbtn">Sign Up</string>
    <string name="bahrehmand_farhad_04_30_2020">Bahrehmand, Farhad 04-30-2020</string>
    <string name="occupation">Occupation</string>
    <string name="description">tell us a little bit about yourself</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">matches</string>
    <string name="settings">settings</string>
    <string name="add_match">Add Match</string>
    <string name="UNLIKE">UNLIKE</string>
    <string name="LIKE">LIKE</string>
    <string name="LikeMsg">You LIKED: </string>
    <string name="UnlikedMsg">You UNLIKED: </string>
    <string name="daily_matches_reminder_time">Daily Matches Reminder Time:</string>
    <string name="maximum_distance_search_in_miles">Maximum Distance Search (in Miles):</string>
    <string name="gender">Gender</string>
    <string name="private_public_account">Private/Public Account</string>
    <string name="interested_age_range">Interested Age Range</string>
    <string name="max_distance_error">max distance cannot be less than 1</string>
    <string name="enable_location">enable location</string>
    <string name="location_message">location</string>
    <string name="location_settings">location</string>
    <string name="location_cancel">location</string>
    <string name="network_provider_started_running">running</string>

    network_provider_started_running
    <string name="date_WorkedOn">04/24/2020</string>
    <string name="last_first_name">Kunte, Jenny</string>

    <string name="signUpButton">Sign Up!</string>
    <string name="AssignmentTwo">Kunte, Jenny 04–25-2020</string>
    <string name="birth_mm_dd_yyyy">birth_mm_dd_yyyy</string>
    <string name="welcome_second_Activity">Welcome!</string>
    <string name="occupationHint">Occupation</string>
    <string name="Occupation">Occupation</string>
    <string name="assignmentThree">Kunte, Jenny 05–03–2020</string>
    <string name="go_back_second">Go back!</string>
    <string name="birthdayHint">Birthday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ageSecondLayout">AGE</string>
    <string name="fontFamily">sans-serif-light</string>
    <string name="fullName">FullName:</string>
    <string name="profile_image">Profile Image</string>
    <string name="assignment4">Kunte, Jenny Date: 05.17.2020 Changes</string>
    <string name="assignment5">Kunte, Jenny Date: 05.17.2020</string>
    <string name="item_lists">Lists</string>
    <string name="signUpMessage">\"Thanks for Signing Up! \"</string>
    <string name="pofileFragment">Profile</string>
    <string name="matchesFragment">Matches</string>
    <string name="settingsFragment">Settings</string>
    <string name="position">POSITION</string>
    <string name="assignment6">Kunte Jenny, Date: 05.21.2020</string>
    <string name="daily_match_reminder">Daily Match Reminder</string>
    <string name="this_would_be_match_reminder">This would be match reminder</string>
    <string name="this_would_be_max_distance_in_miles">This would be max distance in Miles</string>
    <string name="max_distance_search_in_miles_info">Max Distance Search in Miles</string>
    <string name="age_range">Age Range</string>
    <string name="hint_type_of_account">Type Of Account</string>
    <string name="gender_pref_info">Gender Preference</string>
    <string name="account_type_text">Account Type</string>
    <string name="assignment7">Kunte Jenny, Date: 05.31.2020</string>
    <string name="min_age">Min. Age</string>
    <string name="max_age">Max Age</string>
    <string name="Updated">Updated</string>
    <string name="save">save</string>
    <string name="reminder">reminder</string>
    <string name="_00_00">_00_00</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="max_distance">max distance</string>
</resources>