<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="150"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin70"
        android:layout_marginTop="@dimen/margin70"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="@dimen/textSize14" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textSize14" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="@dimen/textSize14" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:textSize="@dimen/textSize14" />
        <EditText
            android:id="@+id/occupation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/occupation"
            android:inputType="text"
            android:textSize="@dimen/textSize14" />


        <EditText
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:textSize="@dimen/textSize14"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dateOfBirthText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:hint="@string/date_of_birth_mm_dd_yyyy"
                android:inputType="text"
                android:textSize="@dimen/textSize12" />

            <ImageButton
                android:id="@+id/dateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@color/colorPrimaryDark"
                app:srcCompat="@android:drawable/ic_menu_today"
                android:onClick="showCalendar" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="validateInput"
            android:background="@color/cardview_shadow_end_color"
            app:srcCompat="@drawable/play" />
    </LinearLayout>

    <TextView
        android:id="@+id/projectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bahrehmand_farhad_04_30_2020"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin16"
        />
</LinearLayout>
